--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,28 @@
+html {
+    display: flex;
+    justify-content: center;
+}
+
 body {
     background-color: hsl(212, 45%, 89%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
 }
 
 h1 {
     color: hsl(218, 44%, 22%);
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin-top: 0;
 }
 
 p {
     color: hsl(220, 15%, 55%);
     font-weight: 400;
-    font-size: 15px;
+    font-size: 0.9rem;
     padding-bottom: 20px;
 }
 
@@ -26,10 +36,6 @@ img {
     background-color: hsl(0, 0%, 100%);
     width: 310px;
     border-radius: 0.5cm;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .text {
@@ -39,12 +45,8 @@ img {
 }
 
 .attribution { 
-    font-size: 11px; 
+    font-size: 0.7rem; 
     text-align: center; 
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translate(-50%);
 }
 
 .attribution a { 
