--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,18 @@ html {
     justify-content: center;
 }
 
+/* 
+We set the body element to be a flex container with a flex-direction of column,
+which will align its children vertically.
+ We set the justify-content property to space-between,
+which will push the card and attribution elements to the top and bottom of the container,
+respectively.
+*/
+
 body {
     background-color: hsl(212, 45%, 89%);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     height: 100vh;
@@ -35,7 +43,7 @@ img {
 .card {
     background-color: hsl(0, 0%, 100%);
     width: 310px;
-    border-radius: 0.5cm;
+    border-radius: 10px;
 }
 
 .text {
@@ -44,15 +52,27 @@ img {
     text-align: center;
 }
 
-.attribution { 
-    font-size: 0.7rem; 
-    text-align: center; 
+
+/* 
+By using margin-top: auto on the attribution element,
+we are effectively pushing it to the bottom of the container. 
+This works because,
+in a flex container with a flex-direction of column,
+the auto margin on a child element will push it to the bottom of the container. 
+The card element will take up as much space as it needs,
+while the attribution element will take up the remaining space.
+*/
+.attribution {
+    font-size: 0.7rem;
+    margin-top: auto;
+    font-size: 0.8rem;
+    text-align: center;
 }
 
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+.attribution a {
+    color: hsl(228, 45%, 44%);
 }
 
-a:hover { 
-    color: hsl(228, 82%, 15%); 
+a:hover {
+    color: hsl(228, 82%, 15%);
 }
